--- a/pages/16575.html
+++ b/pages/16575.html
@@ -978,6 +978,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#on_coincident_dbranes'>On coincident D-branes</a></li>
 <li><a href='#from_massless_bps_states'>From massless BPS states</a></li>
+<li><a href='#for_mk6_branes_at_adesingularities'>For MK6 branes at ADE-singularities</a></li>
 <li><a href='#on_m9branes'>On M9-Branes</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -1033,6 +1034,24 @@ margin-left: 0em;
 <p><em><a class="existingWikiWord" href="/nlab/show/duality+between+F-theory+and+heterotic+string+theory">duality between F-theory and heterotic string theory</a></em>.</p>
 </li>
 </ul>
+
+<h3 id="for_mk6_branes_at_adesingularities">For MK6 branes at ADE-singularities</h3>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/blow-up">blow-up</a> of an <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> is given by a <a class="existingWikiWord" href="/nlab/show/union">union</a> of <a class="existingWikiWord" href="/nlab/show/Riemann+spheres">Riemann spheres</a> that touch each other such as to form the shape of the <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> whose A-D-E label corresponds to that of the given <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a>.</p>
+
+<p>This statement is originally due to (<a href="#duVal1934I">duVal 1934 I, p. 1-3 (453-455)</a>). A description in terms of <a class="existingWikiWord" href="/nlab/show/hyper-K%C3%A4hler+geometry">hyper-Kähler geometry</a> is due to <a href="#Kronheimer89a">Kronheimer 89a</a>.</p>
+
+<p>Quick survey of this fact is in <a href="#Reid87">Reid 87</a>, a textbook account is <a href="#Slodowy80">Slodowy 80</a>.</p>
+
+<p id="InStringTheory"> In <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> this fact is interpreted in terms of <a class="existingWikiWord" href="/nlab/show/gauge+enhancement">gauge enhancement</a> of the <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a>-lift of coincident <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/D6-branes">D6-branes</a> to an <a class="existingWikiWord" href="/nlab/show/MK6">MK6</a> at an ADE-singularity (<a href="enhanced+gauge+symmetry#Sen97">Sen 97</a>):</p>
+
+<p><img src="http://ncatlab.org/nlab/files/ADESingularity.jpg" width="760" alt="ADE 2Cycle" /></p>
+
+<blockquote>
+<p>graphics grabbed from <a href="http://ncatlab.org/schreiber/show/Equivariant+homotopy+and+super+M-branes">HSS18</a></p>
+</blockquote>
+
+<p>See at <em><a class="existingWikiWord" href="/nlab/show/M-theory+lift+of+gauge+enhancement+on+D6-branes">M-theory lift of gauge enhancement on D6-branes</a></em> for more.</p>
 
 <h3 id="on_m9branes">On M9-Branes</h3>
 
@@ -1203,14 +1222,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 09:25:36.
+  Last revised on October  8, 2018 at 10:43:41.
   See the <a href="https://ncatlab.org/nlab/history/enhanced gauge symmetry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/enhanced+gauge+symmetry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enhanced+gauge+symmetry/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/enhanced+gauge+symmetry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enhanced+gauge+symmetry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/enhanced+gauge+symmetry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enhanced+gauge+symmetry/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/enhanced+gauge+symmetry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enhanced+gauge+symmetry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/enhanced gauge symmetry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
