--- a/pages/10066.html
+++ b/pages/10066.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5146/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5146/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -683,6 +683,10 @@ margin-left: 0em;
 <ul>
 <li><a href='#relation_to_operator_ktheory_of_crossed_product_algebras'>Relation to operator K-theory of crossed product algebras</a></li>
 <li><a href='#RelationToRepresentationTheory'>Relation to representation theory</a></li>
+<ul>
+<li><a href='#EquivariantKUAndTheComplexRepresentationRing'>Equivariant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>KU</mi></mrow><annotation encoding="application/x-tex">KU</annotation></semantics></math> and the complex representation ring</a></li>
+<li><a href='#equivariant__and_the_real_representation_ring'>Equivariant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>KO</mi></mrow><annotation encoding="application/x-tex">KO</annotation></semantics></math> and the real representation ring</a></li>
+</ul>
 <li><a href='#relation_to_ktheory_of_homotopy_quotient_spaces_borel_constructions'>Relation to K-theory of homotopy quotient spaces (Borel constructions)</a></li>
 <li><a href='#equivariant_cherncharacter'>Equivariant Chern-character</a></li>
 </ul>
@@ -705,8 +709,11 @@ margin-left: 0em;
 
 <h3 id="RelationToRepresentationTheory">Relation to representation theory</h3>
 
+<h4 id="EquivariantKUAndTheComplexRepresentationRing">Equivariant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>KU</mi></mrow><annotation encoding="application/x-tex">KU</annotation></semantics></math> and the complex representation ring</h4>
+
 <p>The <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> over the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a> is the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of the point, or equivalently by the <a class="existingWikiWord" href="/nlab/show/Green-Julg+theorem">Green-Julg theorem</a>, if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/compact+Lie+group">compact Lie group</a>, the <a class="existingWikiWord" href="/nlab/show/operator+K-theory">operator K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/group+algebra">group algebra</a> (the <a class="existingWikiWord" href="/nlab/show/groupoid+convolution+algebra">groupoid convolution algebra</a> of the <a class="existingWikiWord" href="/nlab/show/delooping">delooping</a> groupoid of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>):</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msubsup><mi>KU</mi> <mi>G</mi> <mn>0</mn></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>KK</mi><mo stretchy="false">(</mo><mi>ℂ</mi><mo>,</mo><mi>C</mi><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation" id="eq:RepresentationRingAsEquivariantKTheoryOfThePoint"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msubsup><mi>KU</mi> <mi>G</mi> <mn>0</mn></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>KK</mi><mo stretchy="false">(</mo><mi>ℂ</mi><mo>,</mo><mi>C</mi><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  
   R_{\mathbb{C}}(G) \simeq KU^0_G(\ast) \simeq KK(\mathbb{C}, C(\mathbf{B}G))
   \,.
 
@@ -715,7 +722,39 @@ margin-left: 0em;
 
 <p>(e.g. <a href="#Greenlees05">Greenlees 05, section 3</a>, <a href="#Wilson16">Wilson 16, example 1.6 p. 3</a>)</p>
 
-<p>Therefore a similar isomorphism identifies the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-representation ring over the <a class="existingWikiWord" href="/nlab/show/real+numbers">real numbers</a> with the equivariant orthogonal <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-theory of the point in degree 0:</p>
+<p>Under this identification and the <a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion">Atiyah-Segal completion</a> map</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msubsup><mi>KU</mi> <mi>G</mi> <mn>0</mn></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mover><mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover></mover><mi>KU</mi><mo stretchy="false">(</mo><mi>BG</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  R_{\mathbb{C}}(G)
+  \simeq
+  KU_G^0(\ast)
+    \overset{ \widehat{(-)} }{\longrightarrow}
+  KU(BG)
+  
+
+</annotation></semantics></math></div>
+<p>one may ask for the <a class="existingWikiWord" href="/nlab/show/Chern+character">Chern character</a> of the K-theory class <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mi>V</mi><mo>^</mo></mover><mo>∈</mo><mi>KU</mi><mo stretchy="false">(</mo><mi>BG</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\widehat{V} \in KU(BG)</annotation></semantics></math> expressed in terms of the actual <a class="existingWikiWord" href="/nlab/show/character">character</a> of the <a class="existingWikiWord" href="/nlab/show/representation">representation</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>. There is a closed formula at least for the <a class="existingWikiWord" href="/nlab/show/first+Chern+class">first Chern class</a> (<a href="#Atiyah61">Atiyah 61, appendix</a>):</p>
+
+<p>For 1-dimensional representations <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/first+Chern+class">first Chern class</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mi>V</mi><mo>^</mo></mover></mrow><annotation encoding="application/x-tex">\widehat{V}</annotation></semantics></math> is just the canonical isomorphism of 1-dimensional characters with <a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> and then with <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> of the <a class="existingWikiWord" href="/nlab/show/classifying+space">classifying space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">B G</annotation></semantics></math></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>c</mi> <mn>1</mn></msub><mrow><mo>(</mo><mover><mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>Hom</mi><mo stretchy="false">(</mo><mi>G</mi><mo>,</mo><mi>U</mi><mo stretchy="false">(</mo><mn>1</mn><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mo>≃</mo></mover><msubsup><mi>H</mi> <mi>grp</mi> <mn>2</mn></msubsup><mo stretchy="false">(</mo><mi>G</mi><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mo>≃</mo><msup><mi>H</mi> <mn>2</mn></msup><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
+  c_1\left(\widehat{(-)}\right)
+  \;\colon\;
+  Hom(G, U(1))
+  \overset{\simeq}{\longrightarrow}
+  H^2_{grp}(G,\mathbb{Z})
+  \simeq
+  H^2(B G, \mathbb{Z})
+  \,,
+
+</annotation></semantics></math></div>
+<p>while for any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-dimensional representation <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> the first Chern class is this isomorphism applied to the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>th <a class="existingWikiWord" href="/nlab/show/exterior+power">exterior power</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>c</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo><mo>=</mo><msub><mi>c</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><msup><mo>∧</mo> <mi>n</mi></msup><mi>V</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  c_1(V) = c_1(\wedge^n V)
+  \,.
+
+</annotation></semantics></math></div>
+<h4 id="equivariant__and_the_real_representation_ring">Equivariant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>KO</mi></mrow><annotation encoding="application/x-tex">KO</annotation></semantics></math> and the real representation ring</h4>
+
+<p>An isomorphism analogous to <a class="maruku-eqref" href="#eq:RepresentationRingAsEquivariantKTheoryOfThePoint">(1)</a> identifies the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-representation ring over the <a class="existingWikiWord" href="/nlab/show/real+numbers">real numbers</a> with the equivariant orthogonal <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-theory of the point in degree 0:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msubsup><mi>KO</mi> <mi>G</mi> <mn>0</mn></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   R_{\mathbb{R}}(G)
   \;\simeq\;
@@ -828,9 +867,17 @@ margin-left: 0em;
 
 <h2 id="References">References</h2>
 
-<p>The idea of equivariant <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> goes back to</p>
+<p>The idea of equivariant <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> and the <a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> goes back to</p>
 
 <ul>
+<li id="Atiyah61">
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Atiyah">Michael Atiyah</a>, <em>Characters and cohomology of finite groups</em>, Publications Mathématiques de l’IHÉS, Volume 9 (1961) , p. 23-64 (<a href="http://www.numdam.org/item?id=PMIHES_1961__9__23_0">numdam</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Atiyah">Michael Atiyah</a>, <a class="existingWikiWord" href="/nlab/show/Friedrich+Hirzebruch">Friedrich Hirzebruch</a>, <em>Vector bundle and homogeneous spaces</em>, Proc. Sympos. Pure Math., Vol. III, American Mathematical Society, Providence, R.I., 1961, 3, 7–38 (<a class="existingWikiWord" href="/nlab/files/AtiyahHirzebruch61.pdf" title="pdf">pdf</a>)</p>
+</li>
+
 <li id="Segal68">
 <p><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Equivariant K-theory</em>, Inst. Hautes Etudes Sci. Publ. Math. No. 34 (1968) p. 129-151</p>
 </li>
@@ -917,14 +964,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 03:56:02.
+  Last revised on October  9, 2018 at 09:42:15.
   See the <a href="https://ncatlab.org/nlab/history/equivariant K-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant K-theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
