--- a/pages/10356.html
+++ b/pages/10356.html
@@ -924,6 +924,10 @@ margin-left: 0em;
 <li><a href='#InTermsOfTheWorldvolumeGaugeTheories'>In terms the worldvolume gauge theories</a></li>
 <li><a href='#fractional_mbranes'>Fractional M-branes</a></li>
 </ul>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#RRCharge'>RR-Charge</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -1070,6 +1074,27 @@ margin-left: 0em;
 
 <p>is considered informally in the <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> literature (for instance in discussion of <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a>) but has not been given a correspondingly precise cohomological formulation yet.</p>
 
+<h2 id="properties">Properties</h2>
+
+<h3 id="RRCharge">RR-Charge</h3>
+
+<p>Under the identification</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msubsup><mi>KU</mi> <mi>G</mi> <mn>0</mn></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  KU_G^0(\ast) \simeq R_{\mathbb{C}}(G)
+
+</annotation></semantics></math></div>
+<p>of the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of the point, hence of the fractional D-branes at the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/singularity">singularity</a> with the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>, <a class="existingWikiWord" href="/nlab/show/character">character</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mi>V</mi></msub><mo>≔</mo><msub><mi>tr</mi> <mi>V</mi></msub><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>ConjCl</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">
+  \chi_V \coloneqq tr_V(-) \;\colon\; ConjCl(G) \to \mathbb{C}
+
+</annotation></semantics></math></div>
+<p>of a <a class="existingWikiWord" href="/nlab/show/representation">representation</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>∈</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">V \in R(G)</annotation></semantics></math> represents the <a class="existingWikiWord" href="/nlab/show/RR-field">RR-field</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Q</mi><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mfrac><mrow><msub><mi>χ</mi> <mi>V</mi></msub><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo></mrow><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow></mfrac></mrow><annotation encoding="application/x-tex">
+  Q(g) \;=\; \frac{ \chi_V(g) }{ {\vert G \vert} }
+
+</annotation></semantics></math></div>
+<p>of the corresponding fractional D-brane in the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/twisted+sector">twisted sector</a> (<a href="#DiaconescuGomis99">Diaconescu-Gomis 99 (2.4)</a>, <a href="#BilloCrapsRoose01">Billó-Craps-Roose 01, (4.65) with (4.41)</a>, <a href="#RecknagelSchomerus13">Recknagel-Schomerus 13 (4.102)</a>)</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1165,8 +1190,8 @@ margin-left: 0em;
 <p>M. Frau, A. Liccardo, R. Musto, <em>The Geometry of Fractional Branes</em>, Nucl.Phys. B602 (2001) 39-60 (<a href="https://arxiv.org/abs/hep-th/0012035">arXiv:hep-th/0012035</a>)</p>
 </li>
 
-<li>
-<p>M. Billo’, B. Craps, F. Roose, <em>Orbifold boundary states from Cardy’s condition</em>, JHEP 0101:038, 2001 (<a href="https://arxiv.org/abs/hep-th/0011060">arXiv:hep-th/0011060</a>)</p>
+<li id="BilloCrapsRoose01">
+<p>M. Billó, B. Craps, F. Roose, <em>Orbifold boundary states from Cardy’s condition</em>, JHEP 0101:038, 2001 (<a href="https://arxiv.org/abs/hep-th/0011060">arXiv:hep-th/0011060</a>)</p>
 </li>
 
 <li id="QuirozStefanski01">
@@ -1184,7 +1209,7 @@ margin-left: 0em;
 </li>
 
 <li id="RecknagelSchomerus13">
-<p><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Conformal Field Theory and the Worldsheet Approach to D-branes</em>, Cambirdge 2013 (<a href="http://inspirehep.net/record/1308990">spire:1308990</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Conformal Field Theory and the Worldsheet Approach to D-branes</em>, Cambridge 2013 (<a href="http://inspirehep.net/record/1308990">spire:1308990</a>)</p>
 </li>
 </ul>
 
@@ -1199,14 +1224,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 07:53:18.
+  Last revised on October 11, 2018 at 02:54:17.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
