--- a/pages/1594.html
+++ b/pages/1594.html
@@ -1054,7 +1054,13 @@ margin-left: 0em;
 <p>and then further developed notably in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Eric+Zaslow">Eric Zaslow</a>, <em>Topological orbifold models and quantum cohomology rings</em>, Comm. Math. Phys. 156 (1993), no. 2, 301–331.</li>
+<li id="DVVV89">
+<p><a class="existingWikiWord" href="/nlab/show/Robbert+Dijkgraaf">Robbert Dijkgraaf</a>, <a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <a class="existingWikiWord" href="/nlab/show/Erik+Verlinde">Erik Verlinde</a>, <a class="existingWikiWord" href="/nlab/show/Herman+Verlinde">Herman Verlinde</a>, <em>The operator algebra of orbifold models</em>, Comm. Math. Phys. Volume 123, Number 3 (1989), 485-526.</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Eric+Zaslow">Eric Zaslow</a>, <em>Topological orbifold models and quantum cohomology rings</em>, Comm. Math. Phys. 156 (1993), no. 2, 301–331.</p>
+</li>
 </ul>
 
 <p>See also the references at <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></em>.</p>
@@ -1076,14 +1082,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 04:07:52.
+  Last revised on October 11, 2018 at 02:24:39.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/46" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(46 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/47" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(47 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
